# pydantic-ocsf

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  example.py  justfile  ocsf-sibling-attributes-prd.md  pyproject.toml  pytest.ini  ruff.toml  test_reserved_keywords.py  test_serialize_as_any.py  test_type_stubs.py
.claude/: settings.json
.claude/hooks/: format_python.sh
.github/: WORKFLOWS.md
.github/workflows/: publish.yml  test.yml
.schema_cache/: ocsf-schema-1.5.0.json  ocsf-schema-1.6.0.json  ocsf-schema-v1.0.0.json  ocsf-schema-v1.1.0.json  ocsf-schema-v1.2.0.json  ocsf-schema-v1.3.0.json  ocsf-schema-v1.4.0.json  ocsf-schema-v1.5.0.json  ocsf-schema-v1.6.0.json  ocsf-schema-v1.7.0.json  ocsf-schema-v1.8.0-dev.json
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
generator/: CLAUDE.md  __init__.py  model_generator.py  schema_fetcher.py  schema_parser.py  schema_types.py  utils.py
generator/templates/: enum.py.jinja2  event.py.jinja2  event_with_siblings.py.jinja2  init.py.jinja2  object.py.jinja2  object_with_siblings.py.jinja2
ocsf/: __init__.pyi  _model_factory.py  _namespace_module.py  _utils.py  events.pyi  objects.pyi
ocsf/schemas/: v1_0_0.json  v1_1_0.json  v1_2_0.json  v1_3_0.json  v1_4_0.json  v1_7_0.json
ocsf/v1_1_0/: events.pyi
ocsf/v1_2_0/: events.pyi
ocsf/v1_3_0/: objects.pyi
ocsf/v1_4_0/: __init__.pyi  events.pyi  objects.pyi
ocsf/v1_5_0/: events.pyi
ocsf/v1_6_0/: events.pyi  objects.pyi
ocsf/v1_7_0/: events.pyi  objects.pyi
pydantic_ocsf-2.0.0.dist-info/: METADATA  RECORD
scripts/: build_hook.py  download_schemas.py  generate.py  regenerate_stubs.py
src/ocsf/: __init__.py  _base.py  _enum_factory.py  _exceptions.py  _import_hook.py  _model_factory.py  _normalizer.py  _schema_loader.py  _sibling_enum.py  _sibling_validator.py  _uid_validator.py  _utils.py  _version_module.py
src/ocsf/datatypes/: timestamp.py
src/ocsf/events/: base_event.py
src/ocsf/objects/: _dns.py  _entity.py  _resource.py  access_analysis_result.py  account.py  actor.py  additional_restriction.py  advisory.py  affected_code.py  affected_package.py  agent.py  aircraft.py  analysis_target.py  analytic.py  anomaly.py  anomaly_analysis.py  api.py  application.py  assessment.py  attack.py  auth_factor.py  authentication_token.py  authorization.py  autonomous_system.py  baseline.py  campaign.py  certificate.py  check.py  cis_benchmark.py  cis_benchmark_result.py  cis_control.py  cis_csc.py  classifier_details.py  cloud.py  compliance.py  container.py  cve.py  cvss.py  cwe.py  d3f_tactic.py  (+126 more)
src/ocsf/profiles/: base_profile.py  datetime.py  incident.py  (+1 more)
tests/: README.md  __init__.py  conftest.py  test_circular_deps.py  test_circular_imports.py  test_import_hook.py  test_imports.py  test_model_factory.py  test_namespace_separation.py  test_object_sibling_reconciliation.py  test_performance.py  test_schema_bundling.py  test_serialization.py  test_sibling_attributes.py  test_sibling_enum.py  test_sibling_inference.py  test_sibling_reconciliation.py  test_type_uid_auto_calculation.py  test_version_module.py
(+3391 files in other folders)
