[project]
name = "pydantic-ocsf"
version = "1.6.0.20250828"
authors = [{ name = "Steve McMaster", email = "steve@mcmaster.io" }]
description = "Pydantic models for OCSF"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
license = { text = "MIT License" }
dependencies = [
  "annotated-types>=0.7.0",
  "pydantic-extra-types>=2.10.5",
  "pydantic[email]>=2.11.7",
]
[project.urls]
Homepage = "https://github.com/mcm/pydantic-ocsf"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pyright>=1.1.404",
    "ruff>=0.12.11",
]
