[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydantic-ocsf"
version = "2.0.1"
description = "Pydantic models for the Open Cybersecurity Schema Framework (OCSF)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{ name = "Steve McMaster", email = "steve@mcmaster.io" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Typing :: Typed",
]
keywords = ["ocsf", "security", "pydantic", "schema", "cybersecurity"]
dependencies = [
    "eval-type-backport>=0.2.0; python_version < '3.10'",
    "pydantic>=2.5,<3.0",
]

[project.optional-dependencies]
dev = [
    "hatch>=1.15.1",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]
generator = ["jinja2>=3.0", "httpx>=0.25"]

[project.urls]
Homepage = "https://github.com/mcm/pydantic-ocsf"
Documentation = "https://github.com/mcm/pydantic-ocsf#readme"
Repository = "https://github.com/mcm/pydantic-ocsf"

[tool.hatch.build.targets.sdist]
include = ["/src", "/scripts"]

[tool.hatch.build.targets.wheel]
packages = ["src/ocsf"]
artifacts = ["src/ocsf/schemas/v*.json", "src/ocsf/v*/*.pyi"]

[tool.pyright]
reportMissingModuleSource = "none"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["ANN", "E", "F", "I", "UP", "B", "SIM", "S"]
# ANN401: Skip because pydantic does enough type checking for us, and Any is actually needed some places for OCSF
# E501: Skip because we're dealing with that in formatting check
# S101: Using assert for type narrowing is safe
ignore = ["ANN401", "E501", "S101"]

[tool.ruff.lint.per-file-ignores]
# S101: Assertions are fine in tests
"tests/*" = ["ANN", "F841"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=ocsf --cov-report=term-missing"
